# Rust-Random-Stuff

./: acronym.rs  allergies.rs  armstrong-numbers.rs  beer-song.rs  bowling.rs  collatz-conjecture.rs  crypto-square.rs  diffie-hellman.rs  etl.rs  grade-school.rs  grains.rs  hamming.rs  isogram.rs  matching-brackets.rs  minesweeper.rs  nucleotide-count.rs  palindrome-products.rs  pangram.rs  parallel-letter-frequency.rs  poker.rs  prime-factors.rs  proverb.rs  pythagorean-triplet.rs  raindrops.rs  rna-transcription.rs  robot-simulator.rs  rotational-cipher.rs  saddle-points.rs  series.rs  simple-cipher.rs  simple-linked-list.rs  space-age.rs  spiral-matrix.rs  tournament.rs  triangle.rs  variable-length-quantity.rs  wordy.rs
anagram/: anagram.rs  anagram2.rs
atbash-cipher/: atbash_cipher.rs  atbash_cipher0.rs  atbash_cipher1.rs  atbash_cipher2.rs  lib.rs
bob/: bob.rs  bob2.rs
clock/: clock.rs  clock2.rs
difference-of-squares/: difference-of-squares.rs
guessing_game/: .gitignore  Cargo.toml  README.md
luhn/: luhn.rs  (+6 more)
rust-db-restapi/rocket/: Cargo.toml  README.md  Rocket.toml  config.toml
rust-db-restapi/rocket/.github/: dependabot.yml
rust-db-restapi/rocket/migrations/2019-08-10-1012/: init.sql
rust-db-restapi/rocket/src/: main.rs
rust-db-restapi/rocket/src/config/: mod.rs  toml_config.rs
rust-db-restapi/rocket/src/controller/: client_controller.rs  mod.rs
rust-db-restapi/rocket/src/db/: mod.rs  postgres_db.rs
rust-db-restapi/rocket/src/repository/: client_repository.rs  mod.rs
rust-db-restapi/rocket/src/schema/: clients_schema.rs  mod.rs
(+24 files in other folders)
