[package]
name = "rust-db-restapi"
version = "0.1.0"
authors = ["Caio"]
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
diesel = { version = "2.2", features = ["postgres", "r2d2"] }

